Small reformat changes