@@ -1,11 +1,7 @@
 package org.acme.service.implementations;
 
-import java.sql.Timestamp;
-import java.time.Instant;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.stream.Collectors;
-
+import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.inject.Inject;
 import org.acme.avro.back.AlumniDto;
 import org.acme.avro.front.AlumniFrontDto;
 import org.acme.entites.Alumni;
@@ -16,19 +12,23 @@ import org.acme.repository.FacultyRepository;
 import org.acme.service.AlumniDetailsService;
 import org.acme.util.mappers.AlumniMapper;
 
-import jakarta.enterprise.context.ApplicationScoped;
-import jakarta.inject.Inject;
+import java.sql.Timestamp;
+import java.time.Instant;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.stream.Collectors;
+
 @ApplicationScoped
-public class AlumniDetailsServiceImpl implements AlumniDetailsService{
+public class AlumniDetailsServiceImpl implements AlumniDetailsService {
 
     private final AlumniDetailsRepository detailsRepository;
     private final AlumniRepository alumniRepository;
     private final FacultyRepository facultyRepository;
     private final AlumniMapper alumniMapper;
 
-    @Inject    
+    @Inject
     public AlumniDetailsServiceImpl(AlumniDetailsRepository detailsRepository, AlumniRepository alumniRepository,
-            FacultyRepository facultyRepository, AlumniMapper alumniMapper) {
+                                    FacultyRepository facultyRepository, AlumniMapper alumniMapper) {
         this.detailsRepository = detailsRepository;
         this.alumniRepository = alumniRepository;
         this.facultyRepository = facultyRepository;
@@ -43,21 +43,21 @@ public class AlumniDetailsServiceImpl implements AlumniDetailsService{
     @Override
     public List<AlumniDto> getAlumniListByFaculty(String facultyName) throws Exception {
         List<AlumniDetails> details = detailsRepository
-            .find("faculty.facultyName", facultyName)
-            .list();
+                .find("faculty.facultyName", facultyName)
+                .list();
         List<Alumni> alumniList = new ArrayList<>();
         alumniList = details.stream().map(alumniDetail -> {
             return alumniRepository
-            .findByIdOptional((long)alumniDetail.getFacultyNumber())
-                .orElseThrow(() -> new RuntimeException(
-                    "ID mismatch. ID related to Details does not exist in Alumni Table.")
+                    .findByIdOptional((long) alumniDetail.getFacultyNumber())
+                    .orElseThrow(() -> new RuntimeException(
+                            "ID mismatch. ID related to Details does not exist in Alumni Table.")
                     );
-        }).collect(Collectors.toList());
-    
+        }).toList();
+
         List<AlumniDto> dtoList = new ArrayList<>();
-        for(int i = 0; i < details.size(); i++) {
-        
-            dtoList.add(alumniMapper.toDto(alumniList.get(i),details.get(i)));
+        for (int i = 0; i < details.size(); i++) {
+
+            dtoList.add(alumniMapper.toDto(alumniList.get(i), details.get(i)));
         }
         return dtoList;
 
@@ -68,21 +68,21 @@ public class AlumniDetailsServiceImpl implements AlumniDetailsService{
         // they share FN, so just take all alumnidetes that store the name
         // and then go across the fns and return them with their detes.
         List<AlumniDetails> details = detailsRepository
-            .find("fullName", fullName)
-            .list();
+                .find("fullName", fullName)
+                .list();
         List<Alumni> alumniList = new ArrayList<>();
         alumniList = details.stream().map(alumniDetail -> {
             return alumniRepository
-            .findByIdOptional((long)alumniDetail.getFacultyNumber())
-                .orElseThrow(() -> new RuntimeException(
-                    "ID mismatch. ID related to Details does not exist in Alumni Table.")
+                    .findByIdOptional((long) alumniDetail.getFacultyNumber())
+                    .orElseThrow(() -> new RuntimeException(
+                            "ID mismatch. ID related to Details does not exist in Alumni Table.")
                     );
         }).collect(Collectors.toList());
-    
+
         List<AlumniDto> dtoList = new ArrayList<>();
-        for(int i = 0; i < details.size(); i++) {
-        
-            dtoList.add(alumniMapper.toDto(alumniList.get(i),details.get(i)));
+        for (int i = 0; i < details.size(); i++) {
+
+            dtoList.add(alumniMapper.toDto(alumniList.get(i), details.get(i)));
         }
         return dtoList;
     }
@@ -90,26 +90,26 @@ public class AlumniDetailsServiceImpl implements AlumniDetailsService{
     @Override
     public AlumniDetails getAlumniDetailsByFacultyNumber(int facultyNumber) throws Exception {
         return detailsRepository
-            .findByIdOptional((long) facultyNumber)
-            .orElseThrow(()-> new Exception(
-                "No details related to this FN exist."));
+                .findByIdOptional((long) facultyNumber)
+                .orElseThrow(() -> new Exception(
+                        "No details related to this FN exist."));
     }
 
     @Override
     public AlumniDetails getDetailsForAlumni(Alumni alumni) throws Exception {
-      return detailsRepository
-            .findByIdOptional((long) alumni.getFacultyNumber())
-            .orElseThrow(()-> new Exception(
-                "No details related to this FN exist."));
+        return detailsRepository
+                .findByIdOptional((long) alumni.getFacultyNumber())
+                .orElseThrow(() -> new Exception(
+                        "No details related to this FN exist."));
 
     }
 
     @Override
     public AlumniDetails getDetailsForAlumniDto(AlumniDto alumni) throws Exception {
         return detailsRepository
-        .findByIdOptional((long) alumni.getFacultyNumber())
-        .orElseThrow(()-> new Exception(
-            "No details related to this FN exist."));
+                .findByIdOptional((long) alumni.getFacultyNumber())
+                .orElseThrow(() -> new Exception(
+                        "No details related to this FN exist."));
 
     }
 
@@ -117,21 +117,21 @@ public class AlumniDetailsServiceImpl implements AlumniDetailsService{
     public List<AlumniDetails> getDetailsForListOfAlumni(List<Alumni> alumniList) throws Exception {
         return alumniList.stream().map(alumni -> {
             return detailsRepository
-            .findByIdOptional((long) alumni.getFacultyNumber())
-            .orElseThrow(()-> new RuntimeException(
-                "No details related to this FN exist."));
+                    .findByIdOptional((long) alumni.getFacultyNumber())
+                    .orElseThrow(() -> new RuntimeException(
+                            "No details related to this FN exist."));
         }).collect(Collectors.toList());
     }
 
     @Override
     public AlumniDetails updateAlumniDetails(AlumniDetails alumniDetails) throws Exception {
-        AlumniDetails existing = 
-            detailsRepository
-                .findByIdOptional((long) alumniDetails
-                    .getFacultyNumber())
-                .orElseThrow(() -> new Exception(
-                    "AlumniDetails with passed faculty number does not exist.")
-                    );   
+        AlumniDetails existing =
+                detailsRepository
+                        .findByIdOptional((long) alumniDetails
+                                .getFacultyNumber())
+                        .orElseThrow(() -> new Exception(
+                                "AlumniDetails with passed faculty number does not exist.")
+                        );
         existing.setBirthDate(alumniDetails.getBirthDate());
         existing.setFaculty(alumniDetails.getFaculty());
         existing.setFullName(alumniDetails.getFullName());
@@ -143,21 +143,21 @@ public class AlumniDetailsServiceImpl implements AlumniDetailsService{
 
     @Override
     public AlumniDetails updateAlumniDetails(AlumniFrontDto alumniDetails) throws Exception {
-        AlumniDetails existing = 
-            detailsRepository
-                .findByIdOptional((long) alumniDetails
-                    .getFacultyNumber())
-                .orElseThrow(() -> new Exception(
-                    "AlumniDetails with passed faculty number does not exist.")
-                    );   
+        AlumniDetails existing =
+                detailsRepository
+                        .findByIdOptional((long) alumniDetails
+                                .getFacultyNumber())
+                        .orElseThrow(() -> new Exception(
+                                "AlumniDetails with passed faculty number does not exist.")
+                        );
         existing.setBirthDate(alumniDetails.getBirthDate());
         existing.setFaculty(facultyRepository
-            .findByName(alumniDetails.getFaculty()));
+                .findByName(alumniDetails.getFaculty()));
         existing.setFullName(alumniDetails.getFullName());
         existing.setUpdatedAt(Timestamp.from(Instant.now()));
 
         detailsRepository.persist(existing);
         return existing;
     }
-    
+
 }
